--- a/styles.css
+++ b/styles.css
@@ -9,24 +9,62 @@ body {
 }
 
 h1 {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     width: 100%;
+    transform: translateY(-20px);
+    transition: 0.5s ease-in-out;
+    animation: fadeInAnimation ease 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
     margin-bottom: 20px; /* Adjust the spacing between the heading and the button */
+    cursor: default;
 }
-
-.bn49 {
+h1:load {
+    transform: translateY(0px);
+    transition: 0.5s ease-in-out;
+}
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+.btn {
     border: 0;
     text-align: center;
     display: inline-block;
     padding: 14px;
+    padding-left: 1px;
+    padding-right: 1px;
     width: 150px;
     margin: 7px;
-    color: #ffffff;
-    background-color: #36a2eb;
+    color: #000000;
+    background-color: #ffffff;
     border-radius: 8px;
-    font-family: "proxima-nova-soft", sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-weight: 600;
     text-decoration: none;
     transition: box-shadow 200ms ease-out;
+    transition: 0.5s ease-in-out;
+    box-shadow:5px 5px 5px rgba(0,0,0,0.3);
+}
+.btn:hover {
+    background-color: #e9e9e9; 
+    color: #333333;
+        transition: 0.5s ease-in-out;
+        transform: scale(1.01)
+}
+.btn-container {
+    transform: translateY(-20px);
+    transition: 0.5s ease-in-out;
+    animation: fadeInAnimation ease 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+.btn-container:load {
+    transform: translateY(0);
+    transition: 0.5s ease-in-out;
 }
